def-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: default-gateway
    namespace: istio-system
spec:
    selector:
      istio: ingressgateway    
    servers:
    - hosts:
      - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
