virtserv.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: onlineboutique-ingress
spec:
  hosts:
    - "onlineboutique.pfischer8989.team.arctiq.ca"
  gateways:
  - istio-system/default-gateway
  http:
  - name: "firefox"
    match:
    - headers:
        user-agent:
          regex: ".*Firefox.*"
    route:
    - destination:
        host: frontend
        subset: v1
      weight: 100
#    - destination:
#        host: frontend
#        subset: v2
#      weight: 80
  - name: "others"
    route:
    - destination:
        host: frontend
        subset: v2
      weight: 100
